# HiveMind

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.lab  README.md  build_env.sh  docker-compose.lab.yml  docker-compose.yml  hive.sh  hive.toml  hive_test.sh  lab_deploy.sh  requirements.txt
.cargo/: config.toml
agents/drone/: Cargo.toml  build.rs
agents/drone/models/: shaper_policy.onnx.data
agents/drone/src/: main.rs
agents/honeybee/: Cargo.toml
agents/honeybee/src/: main.rs
agents/queen/: Cargo.toml
agents/queen/src/: main.rs
agents/swarm/: Cargo.toml
agents/swarm/src/: main.rs
agents/weaver/: Cargo.toml
agents/weaver/src/: main.rs
agents/worker/: Cargo.toml  build.rs
agents/worker/models/: feature_names.txt
agents/worker/src/: main.rs
beekeeper/: Cargo.toml
beekeeper/src/: main.rs  scripting.rs  tui.rs
buzz/: Cargo.toml
buzz/src/: main.rs
c2/: Cargo.toml
c2/src/: db.rs  main.rs  session.rs  shell.rs
deploy/charts/hive/: Chart.yaml  values.yaml
deploy/charts/hive/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
docs/: AGENTS.md  API.md  DEPLOYMENT.md  DEVELOPMENT.md  EVASION.md  MITRE_MAPPING.md  NAMING.md  OPERATOR_GUIDE.md  README.md
hive_base/: Cargo.toml
hive_base/src/: anti_analysis.rs  anti_forensics.rs  arena_mgr.rs  attack.rs  c2_bridge.rs  c2_channels.rs  chrononaut.rs  cloud_worker.rs  comms.rs  config.rs  consensus.rs  crypto.rs  did.rs  ephemeral.rs  exfil.rs  exploits.rs  federation.rs  fileless.rs  guardian.rs  hades_gate.rs  hive_scale.rs  hivemind.rs  homomorphic.rs  honeycomb.rs  identity.rs  kerberos.rs  larva.rs  lateral.rs  ldc.rs  leech.rs  lib.rs  lolbin.rs  marl_online.rs  ml.rs  nectar.rs  obfstr.rs  opsec.rs  panal.rs  pheromone.rs  phoenix.rs  (+17 more)
hive_base/src/platform_layer/: filesystem.rs  ipc.rs  mod.rs  network.rs  os.rs  process.rs  runtime.rs  stinger.rs
hive_base/tests/: edr_sandbox.rs  integration_test.rs
scripts/: build_payload.sh  deploy.sh  launch_colony.sh  obfuscate_pe.py  scenario.sh
stinger/: Cargo.toml
stinger/src/: main.rs
tests/: c2_server.py  dashboard.py  e2e_colony.sh  edr_gauntlet.sh  monitor_detections.py  test_c2_failover.sh  validate_edr.py
training/: train_model.py
training/overmind/: prepare_prompts.py
training/scout/: generate_dataset.py  train_classifier.py
training/shaper/: env_simulator.py  train_marl.py  train_rl.py
