[package]
name = "beekeeper"
version = "3.0.0"
edition = "2021"

[dependencies]
hive_base = { path = "../hive_base" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
