[package]
name = "hive_base"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
chacha20 = "0.9"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
serde_json = "1"
toml = "0.8"
num_cpus = "1"
which = "6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
futures = "0.3"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "handleapi", "processthreadsapi", "winnt", "synchapi", "errhandlingapi", "winbase", "processenv", "profileapi", "tlhelp32", "sysinfoapi", "debugapi", "libloaderapi", "heapapi", "winreg", "winsock2", "ws2def", "iphlpapi", "securitybaseapi", "winerror", "impl-default", "namedpipeapi", "fileapi", "minwindef", "basetsd", "windef", "iptypes", "minwinbase"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "htl_throughput"
harness = false

[[bench]]
name = "ipc_validation"
harness = false
