[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
hive_base = { path = "../../hive_base" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
ndarray = "0.15"
